# Tesis-app

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  requirements.txt
backups/: README.md
dlms-bridge/: .gitignore  GATEWAY_SETUP.md  MONITORING_REPORT_10MIN.md  QOS_SUPERVISOR_MANUAL.md  README.md  REALTIME_ACTION_PLAN.md  REALTIME_OPTIMIZATION_SUMMARY.md  auto_provision_and_start.sh  create_gateway.py  dlms-admin-api.service  dlms-mosquitto-bridge.service  dlms-mqtt-bridge.service  dlms_bridge.db  dlms_client_robust.py  dlms_multi_meter_bridge.py  dlms_optimized_reader.py  dlms_poller_production.py  dlms_to_gateway_bridge.py  dlms_to_mosquitto_bridge.py  find_mqtt_connector.py  gateway_dlms_bridge.py  list_gateways.py  manage-gateway-service.sh  manage_devices.py  monitor_alerts.sh  monitor_all_services.sh  monitor_meter_worker.sh  monitor_multimeter_bridge.sh  monitor_system.sh  monitor_watchdog.sh  mqtt_config.json  mqtt_publisher.py  network_monitor.py  provision_device.py  qos-diagnostics.sh  qos-supervisor-sudoers  qos-supervisor.service  qos_health_check.py  qos_monitor.py  qos_supervisor.py  (+20 more)
dlms-bridge/admin/: __init__.py  api.py  (+7 more)
docker/: Dockerfile  README.md  clean-all.sh  docker-run-mqtt.sh
projects/: README.md
projects/LwM2M_SMART_METER_OBJ_ESP32C6/main/: CMakeLists.txt  Kconfig.projbuild  bac19_object.c  device_object.c  energy_accumulator.c  firmware_update.c  idf_component.yml  led_status.c  led_status.h  location_object.c  lwm2m_client.c  main.c  power_model.c  power_model.h  smart_meter_object.c  smart_meter_object.h  wifi_provisioning.c  wifi_provisioning_new.c
projects/LwM2M_TEMP_OBJ_ESP32C6/main/: CMakeLists.txt  Kconfig.projbuild  bac19_object.c  connectivity_object.c  device_object.c  firmware_update.h  humidity_object.c  led_status.c  led_status.h  location_object.c  lwm2m_client.c  main.c  onoff_object.c  onoff_object.h  server_object_custom.c  temp_object.c  temp_object.h  thingsboard_provision.c  thingsboard_provision.h  thread_commissioner.c  thread_commissioner.h  thread_joiner.c  thread_joiner.h  thread_prov.h  wifi_provisioning.c  wifi_provisioning.h
projects/common/components/common/: CMakeLists.txt  ethernet.c  net_common.c  wifi.c
projects/common/components/common/include/: ethernet.h  net_common.h  wifi.h
scripts/: quick_start.sh  setup_environment.sh  show_structure.sh
testing/: README.md
tools/: README.md  wifi_ap_nmcli.sh
(+225 files in other folders)
